styles/style.css
html, body {
    background-color: rgb(226, 249, 231);
}

/* Change mouse on listings */
.list {
    cursor: pointer;
}

/* Style for Home page */
/* Is this too confusing? (scroll of my listings on home page */
#yourListings2 {
    height: 30vh;
    overflow-y: scroll;
}
#brand {
    margin-top: 20px;
}
#noListings {
    text-align: center;
    font-size: 15pt;
    margin-top: 21%;
    margin-left: 6%;
    margin-right: 6%;
}

/* Style for listing page  */
#productImage {
    width: 90%;
    max-height: 60vh;
}
#imageForward {
    float: right;
    margin-left: 5px;
    width: 100px;
    display: none;
}
#imageBackward {
    float: left;
    margin-right: 5px;
    width: 100px;
    display: none;
}
#imageBackward:hover, #imageForward:hover {
    opacity: 50%;
}
#images {
    display:flex;
    align-items: center;
    justify-content: center;
}
#description {
    text-align: center;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
#productName{
    margin-left: auto;
    margin-right: auto;
    width: 33%;
}
#userName {
    margin-left: auto;
    margin-right: auto;
    width: 33%;
}
#price {
    margin-left: auto;
    margin-right: auto;
    width: 33%;
}
#email {
    margin-left: auto;
    display: inline;
    order: 6;
}
#address {
    width: 100%;
    order: 5;
    margin-left: auto;
    margin-right: auto;
}
#phoneNumber {
    display: inline;
    margin-left: auto;
    order: 8;
}
#copyButtonPhone {
    order: 9;
    margin-right: auto;
}
#copyButtonEmail {
    margin-right: auto;
    order: 7;
}
#information {
    text-align: center;
    width: 100%;
    margin-left: 5%;
    margin-right: 5%;
}

#map-div {
    display: flex;
    justify-content: center;
    padding-bottom: 45px;
}

/* Style for own listing page */
#images {
    margin-top: 10%;
}
#descriptionForm {
    text-align: center;
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}
label[for=productName] {
    width: 35%;
    margin-top: 20px;
}
input#productName {
    width: 55%;
    margin-top: 17px;
}
label[for=price] {
    width: 18%;
    margin-top: 20px;
    float: left;
}
#dollarSign {
    display: inline;
    margin-top: 17px;
}
input#price {
    width: 30%;
    margin-right: 40%;
    margin-top: 17px;
}
label[for=information] {
    width: 30%;
    margin-top: 20px;
}
input#information {
    width: 60%;
    margin-top: 17px;
}
#submitButton {
    margin-top: 20px;
    margin-left: 10px;
    margin-right: 10px;
}
#deleteButton {
    margin-top: 10px;
    margin-left: 10px;
    margin-right: 10px;
}
#descriptionForm #userName {
    display: none;
}
#descriptionForm #email {
    display: none;
}
#descriptionForm #copyButtonEmail {
    display: none;
}
#descriptionForm #copyButtonPhone {
    display: none;
}
#descriptionForm #address {
    display: none;
}
#descriptionForm #phoneNumber {
    display: none;
}


/* modal styling */
.modal {
    border-radius: 5%;
     padding: 1em;
     width: 75vw;
     height: 35vh;
     border: 0;
     box-shadow: 0 0 1em rgb(0 0 0 / .3);
  
    & > * {
      margin: 0 0 0.5rem 0;
    }
  }
  
  .modal::backdrop {
    background: rgb(0 0 0 / 0.4);
  }

#modalSub h2 {
    grid-row: 1 / span 1;
}

#modalSub p {
    margin-top: 20%;
    margin-bottom: 20%;
    display: flex;
    justify-content: center;
    text-align: center;
}

#modalSub button {
    margin-left: 38%;
}

#modalDelete p {
    margin-top: 20%;
    margin-bottom: 20%;
    display: flex;
    justify-content: center;
    text-align: center;
}

#modal-cancel-button {
    margin-left: 15%;
    margin-right: 15%;
}

#modalLogout p {
    margin-top: 20%;
    margin-bottom: 30%;
    display: flex;
    justify-content: center;
    text-align: center;
}

#modal-logoutCancel-button{
    margin-left: 15%;
    margin-right: 15%;
}

#modalUpdate p {
    margin-top: 20%;
    margin-bottom: 30%;
    display: flex;
    justify-content: center;
    text-align: center;
}

#modalUpdate button {
    margin-left: 37%;
}

/* Style for browsing page */
.list {
    display: grid;
    height: 200px;
    width: 95vw;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    grid-template-rows: 60% 20% 20%;
    grid-template-columns: 33% 33% 34%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    border-radius: 5px;
    font-weight: bold;
    overflow: hidden;
    text-align: center;
    white-space: nowrap;
}
.bkgClr {
    grid-row: 2 / span 2;
    grid-column: 1 / span 3;
    background-color: rgba(255, 255, 255, 0.5);
    border-radius: 5px;
    border: 1px solid rgba(255, 255, 255, 0.18);
    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
}
.prodName {
    grid-row: 2 / span 1;
    grid-column: 1 / span 1;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}
.userName {
    grid-row: 2 / span 1;
    grid-column: 2 / span 1;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}
.price {
    grid-row: 2 / span 1;
    grid-column: 3 / span 1;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}
.info {
    grid-row: 3 / span 1;
    grid-column: 1 / span 3;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
}


/* Style for submission form page */
#submission-form {
    height: 70vh;
    width: 100vw;
    padding: 10px;
}

.form-label {
    padding-top: 10px;
}

#select-label {
    margin-top: 2%;
}
.btn-block {
    width: 100%;
}

.col-12 {
    padding-bottom: 20px;
}

.form-floating {
    padding-top: 10px;
}

.navbar {
    margin-top: 5px;
    margin-left: 2.5vw;
    margin-right: 2.5vw;
}

/* footer styling */
.footer, .d-flex {
    margin: 10px;
}

.footerButton {
    width: 45px;
    height: 45px;
    border-radius: 50%;
}

.footerButton p {
    margin: auto;
}

#footerSubmission {
    float: right;
}

#footerBack {
    float: left;
}

h1, h2 {
    display: flex;
    justify-content: center;
}
.d-flex {
    width: 95vw;
}
#searchSection {
    margin: 0;
    padding: 0;
    margin-left: 2.5vw;
    margin-right: 2.5vw;
    width: 95vw;
}
.footer{
    display: grid;
    pointer-events: none;
}
#footerSubmission {
    pointer-events: auto;
}
#footerBack{
    pointer-events: auto;
}

